Solve issue with vertical scrollbar

--- a/ui/main/src/app/modules/feed/components/card-list/card-list.component.scss
+++ b/ui/main/src/app/modules/feed/components/card-list/card-list.component.scss
@@ -35,7 +35,7 @@
     border-top-width: 1px;
     border-top-style: solid;
     height: 10px;
-    margin-top: 10px;
+    margin-top: 0px;
     margin-right: 20px;
     margin-left: 1px;
     border-color: var(--opfab-card-tab-border-color);
